# vue-comparison

./: .gitignore  README.md  pyproject.toml
challengers/vue2/vite/: index.html  package.json
challengers/vue2/vite/src/: App.vue  main.js
challengers/vue2/vite/src/components/: HelloWorld.vue
challengers/vue2/webpack/: package.json
challengers/vue2/webpack/src/: App.vue  style.css
challengers/vue2/webpack/src/components/: HelloWorld.vue
challengers/vue3/shim/: build.js  package.json  vendor.js
challengers/vue3/vite/src/: App.vue  main.js
vue_comparison/: __init__.py  __main__.py  args.py
vue_comparison/service/: admin.py
